Modified the name
Update

--- a/asound.conf
+++ b/asound.conf
@@ -22,12 +22,12 @@ pcm.dmixer {
 
 ctl.dmixer {
     type hw
-    card sndrpihifimemss
+    card sndrpistereohat
 }
 
 pcm.speaker {
     type hw
-    card sndrpihifimemss
+    card sndrpistereohat
 }
 
 pcm.capture {
@@ -37,7 +37,7 @@ pcm.capture {
 
 pcm.microphone {
     type hw
-    card sndrpihifimemss
+    card sndrpistereohat
     channels 2
     format S32_LE
 }
